--- a/src/main/java/com/dainn/report/ReportOrder.jrxml
+++ b/src/main/java/com/dainn/report/ReportOrder.jrxml
@@ -2,7 +2,7 @@
 <!-- Created with Jaspersoft Studio version 6.20.6.final using JasperReports Library version 6.20.6-5c96b6aa8a39ac1dc6b6bea4b81168e16dd39231  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ReportOrder" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="15d91d5b-06b4-4127-8358-4dd51b7af949">
     <property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-    <property name="com.jaspersoft.studio.data.defaultdataadapter" value="db"/>
+<!--    <property name="com.jaspersoft.studio.data.defaultdataadapter" value="db"/>-->
     <parameter name="orderId" class="java.lang.Integer"/>
     <queryString>
         <![CDATA[SELECT dainnstore.`order`.id,
